--- a/style.css
+++ b/style.css
@@ -1,80 +1,117 @@
 
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,400,700');
+@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
 
-*{
-  margin: 0;
-  padding: 0;
-  outline: none;
+* {
   box-sizing: border-box;
-  font-family: 'Raleway', sans-serif;
 }
 
-body{ background: #3598dc; }
-
-.cont{
-  position: relative;
-  width: 25%;
-  height: 400px;
-  padding: 10px 25px;
-  margin: 10vh auto;
-  background: #fff;
-  border-radius: 8px;
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  min-height: 100vh;
+  font-family: 'Montserrat', sans-serif;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(6, 215, 152, 1) 0%,
+    rgba(135, 219, 213, 1) 30%,
+    rgba(32, 204, 158, 1) 70%
+  );
+  
 }
 
-.form{ width: 100%; height: 100%; }
-
-h1, h2, .user, .pass{ 
-  text-align: center;
-  display: block;
-}
-
-h1{ 
-  color: #606060;
-  font-weight: bold;
-  font-size: 40px;
-  margin: 30px auto;
-}
-
-.user, .pass, .login{
-  width: 100%;
-  height: 45px;
-  border: none;
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 50px 100px;
+  background-color: #f2f2f2;
   border-radius: 5px;
-  font-size: 20px;
-  font-weight: lighter;
+  width: 25em;
+  height: 40em;
+}
+
+.items {
+  display: flex;
+  flex-direction: column;
+}
+
+.items input {
   margin-bottom: 30px;
+  padding: 2px 0px;
+  padding-bottom: 5px;
+  width: 250px;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  border-bottom: 1.5px solid;
+  border-bottom-color: grey;
+  font-weight: 400;
+  color: #585858;
+  opacity: 0.55;
+  font-size:16px;
 }
 
-.user, .pass{ background: #ecf0f1; }
+#title {
+  margin-bottom: 30px;
+  letter-spacing: 5px;
+  text-align: center;
+  opacity: 0.5;
+}
 
-.login{
-  color: #fff;
+#button {
+  padding: 20px 30px;
+  margin-top: 30px;
+  outline: none;
+  border: none;
+  font-size: medium;
+  font-weight: 600;
+  letter-spacing: 5px;
+  border-radius: 5px;
   cursor: pointer;
-  margin-top: 20px;
-  background: #3598dc;
-  transition: background 0.4s ease;
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(6, 215, 152, 1) 0%,
+    rgba(32, 204, 158, 1) 30%,
+    rgba(135, 219, 213, 1) 70%
+  );
+  color: grey;
 }
 
-.login:hover{ background: #3570dc; }
-
-@media only screen and (min-width : 280px) {
-  .cont{ width: 90% }
+#button:active {
+  transform: translateY(2px);
 }
 
-@media only screen and (min-width : 480px) {
-  .cont{ width: 60% }
+#button text {
+  opacity: 0.5;
 }
 
-@media only screen and (min-width : 768px) {
-  .cont{ width: 40% }
+#sign {
+  margin-top: 4em;
+  text-align: center;
+  letter-spacing: 5px;
+  cursor: pointer;
+  color: rgb(11, 194, 142);
+  font-weight: bolder;
+  text-decoration: none;
 }
 
-@media only screen and (min-width : 992px) {
-  .cont{ width: 30% }
+#sign:active {
+  transform: translateY(2px);
 }
 
-h2{ color: #fff; margin-top: 25px; }
-
+::placeholder {
+  color: grey;
+  text-align: center;
+  letter-spacing: 2px;
+}
 a,
 input:focus,
 select:focus,
@@ -86,4 +123,17 @@ button:focus {
 textarea
 {
 	resize:none;
+	margin-bottom: 3px;  
+  padding: 10px 5px;
+  width: 250px;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  border-bottom: 1.5px solid;
+  border-bottom-color: grey;
+  font-weight: 400;
+  color: #585858;
+  opacity: 0.55;
+  font-size:16px;
+  text-align:center;
 }
